@@ -27,6 +27,7 @@
                         #228 New Command analyze:payments
                         #232 Enhancement module:generate:controller
                         #233 Provide verbose information when module controller is created
+                        #92  Improve module list ( add option to show id )
 2021-03-11  - V 1.6.2 : #142 Error when try to start by prestashopConsole command
                         #170 Create Webservice key command
                         #173 Change link in readme
